# nfl-draft-scraper

./: .gitignore  .markdownlint.json  AGENTS.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/skills/: skill-git-commit.md  skill-markdown.md  skill-pytest-coverage.md  skill-python.md  skill-tdd.md  skill-web-scraping.md
nfl_draft_scraper/: __init__.py  big_board_combiner.py  constants.py  draft_picks_cleaner.py  jl_bb_scraper.py  mddb_bb_scraper.py  merge_bb_ranks_to_picks.py  pipeline.py  scrape_av.py  wl_bb_scraper.py
nfl_draft_scraper/utils/: csv_utils.py
src/nfl_draft_scraper/: constants.py  draft_picks_cleaner.py  jl_bb_scraper.py  mddb_bb_scraper.py  merge_bb_ranks_to_picks.py  scrape_av.py
src/nfl_draft_scraper/utils/: __init__.py  logger.py  webdriver_utils.py
stubs/sportsipy/nfl/: constants.pyi  roster.pyi
tests/: __init__.py  test_big_board_combiner.py  test_big_board_combiner_integration.py  test_constants.py  test_csv_utils.py  test_csv_utils_integration.py  test_draft_picks_cleaner.py  test_jl_bb_scraper.py  test_mddb_bb_scraper.py  test_mddb_bb_scraper_integration.py  test_merge_bb_ranks.py  test_merge_bb_ranks_integration.py  test_pipeline.py  test_scrape_av.py  test_scrape_av_integration.py  test_update_av.py  test_webdriver_utils.py  test_wl_bb_scraper.py
