[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nfl-draft-scraper"
version = "0.1.0"
description = "A Python package for scraping NFL draft data."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["stats", "sports", "football", "nfl", "draft", "scraper"]
authors = [{ name = "Mitch Avis", email = "mitchavis@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "playwright",
    "polars",
    "Requests",
    "selenium",
    "sportsipy",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
bot-evasion = [
    "curl_cffi",
    "camoufox",
    "cryptography",
    "secretstorage",
]

[tool.hatch.build.targets.wheel]
packages = ["nfl_draft_scraper"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "D",   # pydocstyle rules
    "E",   # pycodestyle errors
    "F",   # pyflakes rules
    "I",   # isort rules
    "N",   # pep8-naming rules
    "S",   # bandit security rules
    "SIM", # flake8-simplify rules
    "UP",  # pyupgrade rules
    "W",   # pycodestyle warnings
    "NPY", # numpy docstring rules
    "PGH", # pygrep-hooks rules
]
ignore = [
    "D203", # Conflicts with D211 (no-blank-line-before-class)
    "D213", # Conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Use of assert is standard in pytest

[tool.ruff.lint.isort]
known-first-party = ["nfl_draft_scraper"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
pythonPlatform = "Linux"
executionEnvironments = [{ root = "." }]
# Surface the same diagnostics Pylance shows in VS Code so the CLI stays in sync.
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeStubs = false
reportAttributeAccessIssue = "error"
reportAssignmentType = "error"
reportArgumentType = "error"
reportReturnType = "error"
reportCallIssue = "error"
reportIndexIssue = "error"
reportOperatorIssue = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportGeneralTypeIssues = "error"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",                       # show extra summary for (s)kipped, (x)failed
    "--strict-markers",
    "--cov=nfl_draft_scraper",
    "--cov-report=term-missing",
]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["nfl_draft_scraper"]
omit = ["config.py", "config-*.py", "*/config.py", "*/config-*.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
